...
    return Scaffold(
      appBar: AppBar(
        leading: new Container(),
        title: Text("ParkingALot"),
        actions: <Widget>[
          IconButton(
              key:Key("search"),
              icon: Icon(FontAwesomeIcons.search),
              onPressed: () {
                Navigator.push(
                  context,
                  MaterialPageRoute(builder: (context) => HomePage(user,true)),
                );
...
    return widgets;
  }

  Widget _boxes(String _image,String coordinates,Map park){

    return  GestureDetector(
      key: Key('onePark'),
      onTap: () {
        Navigator.push(
          context,
          MaterialPageRoute(builder: (context) => Parque(park,user)),
          );
      },
...
