...

  Widget _buildButtons() {
    return new Container(
        child: new Column(
            children: <Widget>[
              new RaisedButton(
                key: Key('regbtn'),
                child: new Text('Create an Account'),
                onPressed: _createAccountPressed,
              ),
              new FlatButton(
                key: Key('gotolog'),
                child: new Text('Já tem conta? Clique aqui para entrar.'),
...

  _showDialogCreateUsername(context){
    showDialog(
        context:context,
        builder: ( BuildContext context){
          return AlertDialog(
            key: Key('Alert'),
            title: new Text("Username invalid!"),
            content: new Text("Username already exists"),
            actions: <Widget>[
              new FlatButton(
                key: Key('Alert'),
                onPressed: (){
...
